# dou_engine

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RayProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja  compile_commands.json  imgui.ini  run.sh  tmp  todo.txt
.cache/clangd/index/: abort.hpp.A9AAEC76301F2EAB.idx  action.cpp.491D56A1D18607DC.idx  action.h.F378BDFB3EEBE9E5.idx  actions.cpp.B10D4A5B535036D6.idx  actions.h.01A5A6C073C64871.idx  anchor.h.071AD678018E67B2.idx  anchordict.h.66094ADD4F5B27B3.idx  ansicolor_sink-inl.h.F014F9F0460AFC88.idx  ansicolor_sink.h.EC6EE004F3B0FE9F.idx  args.h.944FE8E320BEF3F3.idx  as_args.hpp.9077E3A60577F029.idx  as_returns.hpp.22A4A5A5BAACFE50.idx  assert.hpp.FB7B3691390A15C5.idx  async.cpp.2008007146F30FF5.idx  async.h.B7D6B24ACF286826.idx  async_logger-inl.h.FA2986067016C3BA.idx  async_logger.h.F0AFDF1A62939540.idx  backtracer-inl.h.AAAFE9514BDAE8B5.idx  backtracer.h.DB5CA6FC090835FF.idx  base.h.70BE3CA6582DED07.idx  base_sink-inl.h.81D217B05D52D494.idx  base_sink.h.0138636435894CDF.idx  base_traits.hpp.1D24C3631CD2554B.idx  basic_file_sink-inl.h.E23E37999E71F007.idx  basic_file_sink.h.45081622C88FA954.idx  binary.cpp.EDEB4456702CB0C4.idx  binary.h.DB9C326D2052CA8D.idx  bind_traits.hpp.3B422E72C64C11CC.idx  build_version.hpp.AE8BD4B3636E972D.idx  bundled_fmtlib_format.cpp.07506B6F11A2325F.idx  bytecode.hpp.606BA9482B4C393B.idx  (+309 more)
cmake/: settings.cmake
engine/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  engine.vcxproj  engine.vcxproj.filters
engine/.ccls-cache/@@home@blid@raygame@engine/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@12@backward@binders.h.blob  @usr@include@c++@12@bits@alloc_traits.h.blob  @usr@include@c++@12@bits@allocator.h.blob  @usr@include@c++@12@bits@basic_ios.h.blob  @usr@include@c++@12@bits@basic_ios.tcc.blob  @usr@include@c++@12@bits@basic_string.h.blob  @usr@include@c++@12@bits@basic_string.tcc.blob  @usr@include@c++@12@bits@char_traits.h.blob  @usr@include@c++@12@bits@charconv.h.blob  @usr@include@c++@12@bits@concept_check.h.blob  @usr@include@c++@12@bits@cpp_type_traits.h.blob  @usr@include@c++@12@bits@cxxabi_forced.h.blob  @usr@include@c++@12@bits@cxxabi_init_exception.h.blob  @usr@include@c++@12@bits@exception.h.blob  @usr@include@c++@12@bits@exception_defines.h.blob  @usr@include@c++@12@bits@exception_ptr.h.blob  @usr@include@c++@12@bits@functexcept.h.blob  @usr@include@c++@12@bits@functional_hash.h.blob  @usr@include@c++@12@bits@hash_bytes.h.blob  @usr@include@c++@12@bits@invoke.h.blob  @usr@include@c++@12@bits@ios_base.h.blob  @usr@include@c++@12@bits@istream.tcc.blob  @usr@include@c++@12@bits@locale_classes.h.blob  @usr@include@c++@12@bits@locale_classes.tcc.blob  @usr@include@c++@12@bits@locale_facets.h.blob  @usr@include@c++@12@bits@locale_facets.tcc.blob  @usr@include@c++@12@bits@localefwd.h.blob  @usr@include@c++@12@bits@memoryfwd.h.blob  @usr@include@c++@12@bits@move.h.blob  @usr@include@c++@12@bits@nested_exception.h.blob  @usr@include@c++@12@bits@new_allocator.h.blob  @usr@include@c++@12@bits@ostream.tcc.blob  @usr@include@c++@12@bits@ostream_insert.h.blob  @usr@include@c++@12@bits@postypes.h.blob  @usr@include@c++@12@bits@predefined_ops.h.blob  @usr@include@c++@12@bits@ptr_traits.h.blob  @usr@include@c++@12@bits@range_access.h.blob  (+140 more)
engine/.ccls-cache/@home@blid@raygame@engine/: include@engine.h.blob  src@engine.cpp  src@engine.cpp.blob
engine/include/: SHADERS.h  component.h  default_rt.h  egassert.h  engine.h  entity.h  entry_point.h  epch.h  espch.h  formatting.h  input.h  log.h  luawrapper.h  macros.h  manager.h  mesh.h  model.h  models.h  ops.hpp  project.h  renderer.h  scene.h  shader.h  systems.h  texture.h  timer.h  util.h  window.h
engine/include/components/: action.h  camera.h  collider.h  hierarchy.h  light.h  luascript.h  modelcomp.h  physicbody.h  primitive.h  tag.h  text.h  transform.h  uuid.h
engine/include/systems/: actionsys.h  luasys.h  physicsys.h  renderersys.h
engine/src/: component.cpp  default_rt.cpp  entity.cpp  entry_point.cpp  input.cpp  log.cpp  luawrapper.cpp  manager.cpp  mesh.cpp  model.cpp  models.cpp  ops.cpp  project.cpp  renderer.cpp  scene.cpp  serializer.cpp  shader.cpp  systems.cpp  texture.cpp  timer.cpp  util.cpp  window.cpp
engine/src/components/: action.cpp  camera.cpp  luascript.cpp  modelcomp.cpp  physicbody.cpp  transform.cpp  uuid.cpp
engine/src/lua/: luafunctions.cpp  luatypes.cpp
engine/src/systems/: actionsys.cpp  luasys.cpp  physicsys.cpp  renderersys.cpp
game/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  game.vcxproj  game.vcxproj.filters
game/.ccls-cache/@home@blid@raygame@game/: src@main.cpp  src@main.cpp.blob
game/include/: actions.h  game.hpp  light.h  main.hpp  test.hpp  thing.h  win.hpp
game/src/: actions.cpp  entry.cpp  game.cpp  light.cpp  main.cpp  test.cpp  thing.cpp  win.cpp
projects/Shit/: Shit.prj
projects/Test/: Test.prj
projects/Thing/: Thing.prj
radiator/: CMakeLists.txt
radiator/include/: RTscene.h  editors.h  greeter.h  helper.h  runtime.h  state.h
radiator/src/: RTscene.cpp  editors.cpp  greeter.cpp  helper.cpp  main.cpp  overview.cpp  runtime.cpp  showgui.cpp
res/: engine_defs.lua  light.scene  main.scene  test.scene  thing.scene
res/meshes/: cube.sff  cube_tl.sff  quad_tex.sff  triangle.sff
res/models/: cube.sff  cube_tl.sff  quad_tex.sff
res/projects/: editor.prj  test.prj
res/scenes/: Main.scene  editortest.scene  light.scene  newfile.scene  smth.scene  test.scene  thing.scene
res/scripts/: cube.lua  editorcam.lua  engineutil.lua  player.lua  report.lua  test.lua  trigger.lua  util.lua
res/shaders/: basic.glsl  camerapresent.glsl  gui.glsl  lighting.glsl  lightingt.glsl  picker.glsl  textured.glsl  very_cool.glsl
template/: CMakeLists.txt
tutorials/GLOBAL_RES/: engine_defs.lua
tutorials/res/: cube.sff
(+58 files in other folders)
